1.实现sql解析页面 2.实现血缘关系（表维度）查询页面

--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "axios": "^1.7.8",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
-    "echarts": "^5.5.1",
+    "echarts": "^5.6.0",
     "element-resize-detector": "^1.2.4",
+    "js-sql-parser": "^1.6.0",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.39.0",
