--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "markdown-it": "^14.1.0",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.39.0",
+    "node-sql-parser": "^5.3.8",
     "pinia": "^2.2.2",
     "qs": "^6.13.0",
     "vue": "^3.5.5",
